# tree-sitter-jinja

./: Makefile  example-file  grammar.js  package.json  pyproject.toml
bindings/c/: tree-sitter-jinja_template.pc.in
bindings/go/: binding.go  binding_test.go
bindings/python/tree_sitter_jinja_template/: __init__.py  binding.c
bindings/python/tree_sitter_your_language_name/: binding.c
bindings/swift/TreeSitterJinjaTemplate/: jinja_template.h
bindings/swift/TreeSitterJinjaTemplateTests/: TreeSitterJinjaTemplateTests.swift
queries/: highlights.scm
queries /: highlights.scm
src/: _g.json  grammar.json  node-types.json  parser.c
